--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -17,7 +17,7 @@ code {
   margin: 0;
   box-sizing: border-box;
   /******/
-  overflow-wrap: break-word; 
+  overflow-wrap: break-word;
 }
 a {
   text-decoration: none;
@@ -25,4 +25,34 @@ a {
 }
 ul {
   list-style: none;
+}
+img {
+  object-fit: cover;
+}
+
+/*******------------------------------------------------------------ */
+/* Custom Scroll Bar */
+@media only screen and (min-width: 600px) {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    /* background: #444; */
+    background: #555;
+    border-radius: 10px;
+    box-shadow: inset 0 0 1.5px rgba(17, 17, 17, 0.632);
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #666;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.067);
+  }
 }
